--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,8 @@
-#address { margin-top:.5em; }
-.formLabel { color: #085D9F; font-weight:bold; }
-.formLabel_amount { font-size:1.5em; }
-.formLabel_address { font-size:.9em; color: #393939 }
-.formValue { display:block; }
-.iziModal-button-close { /* display: none !important; */ }
-#address span a { background-color: #fafafa; color: #999999; padding: .25em 0em; }
-#formatted_dash { color: #085D9F; font-weight:bold; }
+#formatted_dash { color: #085D9F !important; font-weight:bold !important; font-size:1.5em !important; }
+#formatted_amount { font-size:.9em !important; color: #393939 !important; }
+#formatted_status { color: #085D9F !important; font-weight:bold !important; display:block !important; }
 
-#address span a.morelink {
-    color: #999 !important;
-}
+.iziModal-button-close { display: none !important; }
 
 .siteCurrency {
     opacity:0.5;
