--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #formatted_dash { color: #085D9F !important; font-weight:bold !important; font-size:1.5em !important; }
-#formatted_amount { font-size:.9em !important; color: #393939 !important; }
+#formatted_address { font-size:.9em !important; color: #393939 !important; }
 #formatted_status { color: #085D9F !important; font-weight:bold !important; display:block !important; }
 
 .iziModal-button-close { display: none !important; }
